tests/ui/db_option_missing.rs
use dbstruct::dbstruct;

#[dbstruct]
struct Test {
    field: Option<u8>,
}

fn main() {}
